# SnapFileThing

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  TODO.md  docker-compose.yml
.github/workflows/: build-container.yml
backend/: .env.example  Cargo.toml  dev-simple.sh
backend/src/: config.rs  docs.rs  error.rs  main.rs  models.rs
backend/src/handlers/: auth.rs  export.rs  files.rs  folders.rs  frontend.rs  health.rs  import.rs  mod.rs  upload.rs
backend/src/middleware/: auth.rs  rate_limit.rs
backend/src/services/: file_upload.rs  file_utils.rs  folder_manager.rs  image_processor.rs  mod.rs
backend/src/utils/: mime_type.rs  mod.rs  validation.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: FileDropZone.tsx  FileGrid.tsx  Footer.tsx  LoginPage.tsx  Navigation.tsx
frontend/src/components/FileExplorer/: Breadcrumbs.tsx  ContextMenu.tsx  CreateFolderForm.tsx  FileExplorer.tsx  FileUrlsModal.tsx  GridView.tsx  ListView.tsx  Toolbar.tsx
frontend/src/components/ui/: ToastProvider.tsx  progress.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: FilesPage.tsx  HomePage.tsx  UploadPage.tsx
frontend/src/types/: api.ts
