[package]
name = "snapfilething"
version = "1.0.0"
edition = "2021"
authors = ["PHILIPPE Eric <ericphlpp@proton.me>"]
description = "Lightweight file hosting service with QOI conversion and thumbnails"
license = "MIT"

[dependencies]
# Web framework
actix-web = "4"
actix-multipart = "0.6"
actix-files = "0.6"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing
image = { version = "0.25", features = ["jpeg", "png", "webp", "gif", "bmp", "tiff"] }
qoi = "0.4"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
mime = "0.3"
base64 = "0.22"
sha2 = "0.10"

# Configuration
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Security
constant_time_eq = "0.3"
jsonwebtoken = "9"
rand = "0.8"

# Rate limiting
governor = "0.6"

# File system utilities
sanitize-filename = "0.5"
futures = "0.3.31"
futures-util = "0.3.31"
zip = "0.6"

# API Documentation
utoipa = { version = "4", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
tempfile = "3.20.0"
walkdir = "2.5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
